Fix bug with white spaces in galleries

--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -6,7 +6,10 @@ h1{
 	max-width: 85%;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	margin-left: 20px;
-	margin-right: 20px;
+/*	margin-left: 20px;
+	margin-right: 20px; */
 	box-shadow: rgba(0,0,0,0.25) 0px 0px 12px;
+}
+.col-sm-4{
+	min-height: 250px;
 }
